login and token generated

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,9 @@ PORT = 8000
 MONGODB_URL = mongodb+srv://admin:admin@cluster0.1wupnll.mongodb.net/
 
 CORS_ORIGIN =*
+
+JWT_SECRET= 123456789o098765r4ewr45t6yuio
+
+JWT_EXPIRE = 5d
+
+COOKIE_EXPIRE = 5
